--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.data.mongodb.uri=${MONGO_DB_URI}
+
+management.endpoints.web.exposure.include=health,metrics,prometheus
+
