feat: add swagger to project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.data.mongodb.uri=${MONGO_DB_URI}
 
+springdoc.swagger-ui.path=/docs
+
 management.endpoints.web.exposure.include=health,metrics,prometheus
 
